[package]
name = "linkerd-http-route"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[features]
proto = ["linkerd2-proxy-api"]

[dependencies]
http = "0.2"
regex = "1"
rand = "0.8"
thiserror = "1"
tracing = "0.1"
url = "2"
lazy_static = "1.4.0"
governor = "0.4.2"
nonzero_ext = "0.3.0"
once_cell= "1.13.0"

[dependencies.linkerd2-proxy-api]
version = "0.6"
features = ["http-route", "grpc-route"]
optional = true

[dev-dependencies]
maplit = "1"
